[project]
name = "vanadia-vote-bot"
version = "1.0.0"
description = "Bot automatique pour voter sur le serveur Vanadia.fr avec gestion intelligente des captchas"
authors = [{name = "Auto Vote Bot", email = "noreply@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["automation", "bot", "minecraft", "voting", "captcha"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "playwright>=1.40.0",
    "schedule>=1.2.0",
    "plyer>=2.1.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
vanadia-vote = "vote_bot:main"
vanadia-scheduler = "scheduler:main"

[project.urls]
Homepage = "https://github.com/example/vanadia-vote-bot"
Documentation = "https://github.com/example/vanadia-vote-bot#readme"
Repository = "https://github.com/example/vanadia-vote-bot.git"
Issues = "https://github.com/example/vanadia-vote-bot/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "dist", "build", ".venv"]